<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.SignInActivity">

    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        android:id="@+id/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="20dp"
        android:layout_below="@id/logo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textStyle="bold"
            android:id="@+id/login"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/signinEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/baseline_10mp_24"
            android:drawablePadding="20dp"
            android:hint="@string/Email"
            android:includeFontPadding="true"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/signinPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/baseline_10mp_24"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/progressbar2"/>

        <Button
            android:id="@+id/signin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="true"
            android:backgroundTint="@color/button"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="18sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textStyle="bold"
                android:textSize="15sp"
                android:padding="10dp"
                android:id="@+id/txtregister"/>
        </LinearLayout>


    </LinearLayout>



</RelativeLayout>