<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/app_color"
        app:cardCornerRadius="8dp"
        app:contentPadding="7dp">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"

            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/logo"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/title"
            android:layout_gravity="center"
             />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:id="@+id/message"
        android:textStyle="bold|italic"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:backgroundTint="@color/app_color"
            android:layout_alignParentStart="true"
            android:textAllCaps="true"
            android:id="@+id/btnPositive"
            android:textSize="15sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:backgroundTint="@color/app_color"
            android:layout_alignParentEnd="true"
            android:textAllCaps="true"
            android:id="@+id/btnNegative"
            android:textSize="15sp"
            />


    </RelativeLayout>



</LinearLayout>